@@ -1,6 +1,7 @@
 syncthing-gtk (0.9.4.2-3) UNRELEASED; urgency=medium
 
   * Add Enhances: nautilus, nemo, caja. Closes: #913650
+  * add gitlab ci configuration.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 15 Nov 2018 02:19:43 +0000
 
